--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@supabase/supabase-js": "^2.79.0",
+    "@types/nodemailer": "^7.0.4",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
