fix: disable turbopack for production, may fix Netlify static file issues

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,8 @@
 
 [build.environment]
   NODE_VERSION = "20"
+  # Disable Turbopack for production (more stable)
+  NEXT_TURBOPACK = "false"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
