--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/nodemailer": "^7.0.4",
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
+    "next-intl": "^4.7.0",
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
